Fixed issue with game not fitting on smaller screens

--- a/style.css
+++ b/style.css
@@ -7,18 +7,18 @@ body {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.5em;
   font-weight: 700;
   margin: .3em;
 }
 
 h2{
 
-  font-size: 3em;
+  font-size: 2em;
 }
 
 h3 {
-  font-size: 5em;
+  font-size: 4em;
 }
 
 
@@ -31,8 +31,8 @@ h3 {
   border-radius: 1em;
   width: 400px;
   text-align: center;
-  margin: 4em 0 0 0 ;
-  padding-bottom: .5em;
+  margin: 2em 0 0 0 ;
+  padding-bottom: .3em;
 }
 
 .scores {
@@ -41,9 +41,9 @@ h3 {
 }
 
 .scores h2 {
-  font-size: 1.5em;
+  font-size: 1em;
   padding: 0 1em;
-  margin: .3em;
+  margin: .1em;
   text-align: center;
 }
 
@@ -58,7 +58,7 @@ h3 {
   display: flex;
   flex-flow: column nowrap;
   text-align: center;
-  min-height: 400px;
+  min-height: 350px;
   align-items: center;
 }
 
@@ -131,7 +131,7 @@ h3 {
 
 .choiceContainer {;
   border-radius: 1em;
-  min-height: 250px;
+  min-height: 210px;
   min-width: 300px;
   margin: 1em 1em;
   display: flex;
@@ -145,7 +145,7 @@ h3 {
 }
 
 .choiceContainer img {
-  width: 150px;
+  width: 130px;
 }
 .pickWeapon {
   display: flex;
